--- a/frontend/src/components/sub-components/About.css
+++ b/frontend/src/components/sub-components/About.css
@@ -23,10 +23,12 @@
   justify-content: center;
   align-items: center;
   background-color: transparent;
-  background: linear-gradient(90deg, #030303, #0e0f0f);
+  background-color: #030303;
+  /* background: linear-gradient(90deg, #030303, #0e0f0f); */
 }
 .about-container .box:last-child {
-  background: linear-gradient(90deg, #030303, #0e0f0f);
+  background-color: #030303;
+  /* background: linear-gradient(90deg, #030303, #0e0f0f); */
 }
 .about-container .box:before {
   content: "";
@@ -48,7 +50,8 @@
   align-items: center;
   background-color: transparent;
   width: fit-content;
-  background: linear-gradient(90deg, #090a0b, #0e0f0f) !important;
+  background-color: #030303;
+  /* background: linear-gradient(90deg, #090a0b, #0e0f0f) !important; */
 }
 .img-box:before {
   content: "";
@@ -111,10 +114,10 @@ img {
 }
 
 .contact-point {
-  flex: 1;
+  /* flex: 1; */
   margin: 10px;
 }
 .find-me-on {
-  flex: 3;
+  /* flex: 3; */
   margin: 10px;
 }
