--- a/frontend/src/components/sub-components/Education.css
+++ b/frontend/src/components/sub-components/Education.css
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   display: grid !important;
-  grid-template-columns: repeat(auto-fill, minmax(620px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(550px, 1fr));
   grid-row: auto;
   grid-gap: 0 40px;
   margin: 50px auto;
@@ -27,10 +27,12 @@ h2 {
   align-items: center;
   background-color: transparent;
   margin: 20px;
-  background: linear-gradient(90deg, #050505, #262626);
+  background-color: #030303;
+  /* background: linear-gradient(90deg, #050505, #262626); */
 }
 .education-container .box:last-child {
-  background: linear-gradient(90deg, #262626, #050505);
+  background-color: #030303;
+  /* background: linear-gradient(90deg, #262626, #050505); */
 }
 .education-container .box:before {
   content: "";
