--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -7,7 +7,7 @@ a {
   text-align: center;
   line-height: 60px;
   color: #fff;
-  font-size: 28px;
+  font-size: 26px;
   text-transform: uppercase;
   text-decoration: none;
   font-family: sans-serif;
@@ -52,7 +52,7 @@ a:hover:before {
 
 nav {
   /* margin-left: 50px; */
-  padding-left: 70px !important;
+  padding-left: 0 !important;
   padding-top: 10px;
   margin-top: 0 !important;
   background-color: #030303;
@@ -74,4 +74,21 @@ nav {
   background-size: 400%;
   border-radius: 30px;
   animation: animate 8s linear infinite;
+}
+
+.navbar-dark {
+  border: none !important;
+}
+.navbar-dark .navbar-toggler {
+  border: none !important;
+}
+
+#navbarNav {
+  position: absolute;
+  /* top: 50px; */
+  right: 0;
+}
+
+.collapse.show {
+  top: 50px;
 }
