--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -55,7 +55,8 @@
     buttons.forEach(btn=>{
 
       btn.addEventListener('click', function(e){
-        let x = e.clientX-e.target.offsetLeft;
+
+        let x = e.path[0].offsetWidth/2 //e.clientX-e.target.offsetLeft;
         let y = e.clientY-e.target.offsetTop;
 
         let ripples = document.createElement('span');
