--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -30,6 +30,7 @@
 
 
   </head>
+  {% load static %}
   <body class="text-center">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id='progressbar'></div>
